--- a/meilisearch-release-changelog/v1.0.0.md
+++ b/meilisearch-release-changelog/v1.0.0.md
@@ -129,20 +129,20 @@ This is a breaking change if you use any of the following `code`s or `type`s in 
   <details>
     <summary>Click for details</summary>
       <ul>
-        <li>Incorrect use of the <code>q</code> parameter now returns <code>invalid_search_q</code> instead of <code>bad_request</code></li>
-        <li>Incorrect use of the <code>offset</code> parameter now returns <code>invalid_search_offset</code> instead of <code>bad_request</code></li>
-        <li>Incorrect use of the <code>limit</code> parameter now returns <code>invalid_search_limit</code> instead of <code>bad_request</code></li>
-        <li>Incorrect use of the <code>page</code> parameter now returns <code>invalid_search_page</code> instead of <code>bad_request</code></li>
-        <li>Incorrect use of the <code>hits_per_page</code> parameter now returns <code>invalid_search_hits_per_page</code> instead of <code>bad_request</code></li>
-        <li>Incorrect use of the <code>attributesToRetrieve</code> parameter now returns <code>invalid_search_attributes_to_retrieve</code> instead of <code>bad_request</code></li>
-        <li>Incorrect use of the <code>attributesToCrop</code> parameter now returns <code>invalid_search_attributes_to_crop</code> instead of <code>bad_request</code></li>
-        <li>Incorrect use of the <code>showMatchesPosition</code> parameter now returns <code>invalid_search_show_matches_position</code> instead of <code>bad_request</code></li>
-        <li>Incorrect use of the <code>filter</code> parameter now returns <code>invalid_search_filter</code> instead of <code>invalid_filter</code></li>
-        <li>Incorrect use of the <code>sort</code> parameter now returns <code>invalid_search_sort</code> instead of <code>invalid_sort</code></li>
-        <li>Incorrect use of the <code>facets</code> parameter now returns <code>invalid_search_facets</code> instead of <code>bad_request</code></li>
-        <li>Incorrect use of the <code>highlightPreTag</code> parameter now returns <code>invalid_search_highlight_pre_tag</code> instead of <code>bad_request</code></li>
-        <li>Incorrect use of the <code>highlightPostTag</code> parameter now returns <code>invalid_search_highlight_post_tag</code> instead of <code>bad_request</code></li>
-        <li>Incorrect use of the <code>matchingStrategy</code> parameter now returns <code>invalid_search_matching_strategy</code> instead of <code>bad_request</code></li>
+        <li>Sending an invalid <code>q</code> parameter now returns <code>invalid_search_q</code> instead of <code>bad_request</code></li>
+        <li>Sending an invalid <code>offset</code> parameter now returns <code>invalid_search_offset</code> instead of <code>bad_request</code></li>
+        <li>Sending an invalid <code>limit</code> parameter now returns <code>invalid_search_limit</code> instead of <code>bad_request</code></li>
+        <li>Sending an invalid <code>page</code> parameter now returns <code>invalid_search_page</code> instead of <code>bad_request</code></li>
+        <li>Sending an invalid <code>hits_per_page</code> parameter now returns <code>invalid_search_hits_per_page</code> instead of <code>bad_request</code></li>
+        <li>Sending an invalid<code>attributesToRetrieve</code> parameter now returns <code>invalid_search_attributes_to_retrieve</code> instead of <code>bad_request</code></li>
+        <li>Sending an invalid<code>attributesToCrop</code> parameter now returns <code>invalid_search_attributes_to_crop</code> instead of <code>bad_request</code></li>
+        <li>Sending an invalid <code>showMatchesPosition</code> parameter now returns <code>invalid_search_show_matches_position</code> instead of <code>bad_request</code></li>
+        <li>Sending an invalid<code>filter</code> parameter now returns <code>invalid_search_filter</code> instead of <code>invalid_filter</code></li>
+        <li>Sending an invalid <code>sort</code> parameter now returns <code>invalid_search_sort</code> instead of <code>invalid_sort</code></li>
+        <li>Sending an invalid<code>facets</code> parameter now returns <code>invalid_search_facets</code> instead of <code>bad_request</code></li>
+        <li>Sending an invalid<code>highlightPreTag</code> parameter now returns <code>invalid_search_highlight_pre_tag</code> instead of <code>bad_request</code></li>
+        <li>Sending an invalid <code>highlightPostTag</code> parameter now returns <code>invalid_search_highlight_post_tag</code> instead of <code>bad_request</code></li>
+        <li>Sending an invalid <code>matchingStrategy</code> parameter now returns <code>invalid_search_matching_strategy</code> instead of <code>bad_request</code></li>
     </ul>
   </details>
 * When calling any `/settings` routes and their sub-routes, the following error `code`s have been updated:
