--- a/meilisearch-release-changelog/v1.0.0.md
+++ b/meilisearch-release-changelog/v1.0.0.md
@@ -105,7 +105,7 @@ This is a breaking change if you use any of the following `code`s or `type`s in 
     <summary>Click for details</summary>
       <ul>
         <li>A missing <code>uid</code> in the payload will return <code>missing_index_uid</code> instead of <code>bad_request</code></li>
-        <li>Sending a value with a other type than <code>string</code> or <code>null</code> for <code>primaryKey</code> now returns <code>invalid_index_primary_key</code> instead of <code>bad_request</code></li>
+        <li>Sending an invalid <code>primaryKey</code> now returns <code>invalid_index_primary_key</code> instead of <code>bad_request</code></li>
       </ul>
   </details>
 * When calling `GET /index/:uid/documents` and `GET /indexes/:uid/documents/:uid`, some error `code`s have been changed.
