--- a/meilisearch-release-changelog/v1.0.0.md
+++ b/meilisearch-release-changelog/v1.0.0.md
@@ -121,7 +121,7 @@ This is a breaking change if you use any of the following `code`s or `type`s in 
   <details>
     <summary>Click for details</summary>
       <ul>
-        <li>Incorrect use of the <code>primaryKey</code> parameter now returns <code>invalid_index_primary_key</code> instead of <code>bad_request</code></li>
+        <li>Sending an invalid <code>primaryKey</code> parameter now returns <code>invalid_index_primary_key</code> instead of <code>bad_request</code></li>
         <li><code>invalid_document_geo_field</code> has been renamed to <code>invalid_geo_field</code></li>
       </ul>
   </details>
