--- a/meilisearch-release-changelog/v1.0.0.md
+++ b/meilisearch-release-changelog/v1.0.0.md
@@ -112,9 +112,9 @@ This is a breaking change if you use any of the following `code`s or `type`s in 
   <details>
     <summary>Click for details</summary>
       <ul>
-        <li>Incorrect use of the <code>fields</code> parameter now returns <code>invalid_document_fields</code> instead of <code>bad_request</code></li>
-        <li>Incorrect use of the <code>limit</code> parameter now returns <code>invalid_document_limit</code> instead of <code>bad_request</code></li>
-        <li>Incorrect use of the <code>offset</code> parameter now returns <code>invalid_document_offset</code> instead of <code>bad_request</code></li>
+        <li>Sending an invalid<code>fields</code> parameter now returns <code>invalid_document_fields</code> instead of <code>bad_request</code></li>
+        <li>Sending an invalid <code>limit</code> parameter now returns <code>invalid_document_limit</code> instead of <code>bad_request</code></li>
+        <li>Sending an invalid <code>offset</code> parameter now returns <code>invalid_document_offset</code> instead of <code>bad_request</code></li>
       </ul>
   </details>
 * When calling `POST /index/:uid/documents` and `PUT /indexes/:uid/documents`
