--- a/meilisearch-release-changelog/v1.0.0.md
+++ b/meilisearch-release-changelog/v1.0.0.md
@@ -149,18 +149,18 @@ This is a breaking change if you use any of the following `code`s or `type`s in 
   <details>
     <summary>Click for details</summary>
       <ul>
-        <li>Incorrect use of the <code>displayedAttributes</code> setting now returns <code>invalid_settings_displayed_attributes</code> instead of <code>bad_request</code></li>
-        <li>Incorrect use of the <code>searchableAttributes</code> setting now returns <code>invalid_settings_searchable_attributes</code> instead of <code>bad_request</code></li>
-        <li>Incorrect use of the <code>filterableAttributes</code> setting now returns <code>invalid_settings_filterable_attributes</code> instead of <code>bad_request</code></li>
-        <li>Incorrect use of the <code>sortableAttributes</code> setting now returns <code>invalid_settings_sortable_attributes</code> instead of <code>bad_request</code></li>
-        <li>Incorrect use of the <code>rankingRules</code> setting now returns <code>invalid_settings_ranking_rules</code> instead of <code>bad_request</code></li>
-        <li>Incorrect use of the <code>stopWords</code> setting now returns <code>invalid_settings_stop_words</code> instead of <code>bad_request</code></li>
-        <li>Incorrect use of the <code>synonyms</code> setting now returns <code>invalid_settings_synonyms</code> instead of <code>bad_request</code></li>
-        <li>Incorrect use of the <code>distinctAttribute</code> setting now returns <code>invalid_settings_distinct_attribute</code> instead of <code>bad_request</code></li>
-        <li>Incorrect use of the <code>typoTolerance</code> setting now returns <code>invalid_settings_typo_tolerance</code> instead of <code>bad_request</code></li>
-        <li><code>invalid_typo_tolerance_min_word_size_for_typos</code> is not returned anymore and <code>invalid_settings_typo_tolerance</code> is returned instead</li>
-        <li>Incorrect use of the <code>faceting</code> setting now returns <code>invalid_settings_faceting</code> instead of <code>bad_request</code></li>
-        <li>Incorrect use of the <code>pagination</code> setting now returns <code>invalid_settings_pagination</code> instead of <code>bad_request</code></li>
+        <li>Sending an invalid value for the <code>displayedAttributes</code> setting now returns <code>invalid_settings_displayed_attributes</code> instead of <code>bad_request</code></li>
+        <li>Sending an invalid value for the <code>searchableAttributes</code> setting now returns <code>invalid_settings_searchable_attributes</code> instead of <code>bad_request</code></li>
+        <li>Sending an invalid value for the <code>filterableAttributes</code> setting now returns <code>invalid_settings_filterable_attributes</code> instead of <code>bad_request</code></li>
+        <li>Sending an invalid value for the <code>sortableAttributes</code> setting now returns <code>invalid_settings_sortable_attributes</code> instead of <code>bad_request</code></li>
+        <li>Sending an invalid value for the <code>rankingRules</code> setting now returns <code>invalid_settings_ranking_rules</code> instead of <code>bad_request</code></li>
+        <li>Sending an invalid value for the <code>stopWords</code> setting now returns <code>invalid_settings_stop_words</code> instead of <code>bad_request</code></li>
+        <li>Sending an invalid value for the <code>synonyms</code> setting now returns <code>invalid_settings_synonyms</code> instead of <code>bad_request</code></li>
+        <li>Sending an invalid value for the <code>distinctAttribute</code> setting now returns <code>invalid_settings_distinct_attribute</code> instead of <code>bad_request</code></li>
+        <li>Sending an invalid value for the <code>typoTolerance</code> setting now returns <code>invalid_settings_typo_tolerance</code> instead of <code>bad_request</code></li>
+        <li><code>invalid_settings_typo_tolerance</code> replaces <code>invalid_typo_tolerance_min_word_size_for_typos</code></li>
+        <li>Sending an invalid value for the <code>faceting</code> setting now returns <code>invalid_settings_faceting</code> instead of <code>bad_request</code></li>
+        <li>Sending an invalid value for the <code>pagination</code> setting now returns <code>invalid_settings_pagination</code> instead of <code>bad_request</code></li>
     </ul>
   </details>
 * When calling any `/tasks` routes, the following error `code`s have been updated:
