--- a/meilisearch-release-changelog/v1.0.0.md
+++ b/meilisearch-release-changelog/v1.0.0.md
@@ -167,18 +167,18 @@ This is a breaking change if you use any of the following `code`s or `type`s in 
   <details>
     <summary>Click for details</summary>
       <ul>
-        <li>Incorrect use of the <code>offset</code> parameter now returns <code>invalid_search_offset</code> instead of <code>bad_request</code></li>
-        <li>Incorrect use of the <code>limit</code> parameter now returns <code>invalid_search_limit</code> instead of <code>bad_request</code></li>
-        <li>Incorrect use of the <code>uids</code> parameter now returns <code>invalid_task_uids</code> instead of <code>invalid_task_uids_filter</code></li>
-        <li>Incorrect use of the <code>types</code> parameter now returns <code>invalid_task_types</code> instead of <code>invalid_task_types_filter</code></li>
-        <li>Incorrect use of the <code>statuses</code> parameter now returns <code>invalid_task_statuses</code> instead of <code>invalid_task_statuses_filter</code></li>
-        <li>Incorrect use of the <code>cancelBy</code> parameter now returns <code>invalid_task_cancel_by</code> instead of <code>invalid_task_canceled_by_filter</code></li>
-        <li>Incorrect use of the <code>beforeEnqueuedAt</code> parameter now returns <code>invalid_task_before_enqueued_at</code> instead of <code>invalid_task_date_filter</code></li>
-        <li>Incorrect use of the <code>afterEnqueuedAt</code> parameter now returns <code>invalid_task_after_enqueued_at</code> instead of <code>invalid_task_date_filter</code></li>
-        <li>Incorrect use of the <code>beforeStartedAt</code> parameter now returns <code>invalid_task_before_started_at</code> instead of <code>invalid_task_date_filter</code></li>
-        <li>Incorrect use of the <code>afterStartedAt</code> parameter now returns <code>invalid_task_after_started_at</code> instead of <code>invalid_task_date_filter</code></li>
-        <li>Incorrect use of the <code>beforeFinishedAt</code> parameter now returns <code>invalid_task_before_finished_at</code> instead of <code>invalid_task_date_filter</code></li>
-        <li>Incorrect use of the <code>afterFinishedAt</code> parameter now returns <code>invalid_task_after_finished_at</code> instead of <code>invalid_task_date_filter</code></li>
+        <li>Sending an invalid <code>offset</code> parameter now returns <code>invalid_search_offset</code> instead of <code>bad_request</code></li>
+        <li>Sending an invalid <code>limit</code> parameter now returns <code>invalid_search_limit</code> instead of <code>bad_request</code></li>
+        <li>Sending an invalid <code>uids</code> parameter now returns <code>invalid_task_uids</code> instead of <code>invalid_task_uids_filter</code></li>
+        <li>Sending an invalid <code>types</code> parameter now returns <code>invalid_task_types</code> instead of <code>invalid_task_types_filter</code></li>
+        <li>Sending an invalid <code>statuses</code> parameter now returns <code>invalid_task_statuses</code> instead of <code>invalid_task_statuses_filter</code></li>
+        <li>Sending an invalid <code>cancelBy</code> parameter now returns <code>invalid_task_cancel_by</code> instead of <code>invalid_task_canceled_by_filter</code></li>
+        <li>Sending an invalid <code>beforeEnqueuedAt</code> parameter now returns <code>invalid_task_before_enqueued_at</code> instead of <code>invalid_task_date_filter</code></li>
+        <li>Sending an invalid <code>afterEnqueuedAt</code> parameter now returns <code>invalid_task_after_enqueued_at</code> instead of <code>invalid_task_date_filter</code></li>
+        <li>Sending an invalid <code>beforeStartedAt</code> parameter now returns <code>invalid_task_before_started_at</code> instead of <code>invalid_task_date_filter</code></li>
+        <li>Sending an invalid <code>afterStartedAt</code> parameter now returns <code>invalid_task_after_started_at</code> instead of <code>invalid_task_date_filter</code></li>
+        <li>Sending an invalid <code>beforeFinishedAt</code> parameter now returns <code>invalid_task_before_finished_at</code> instead of <code>invalid_task_date_filter</code></li>
+        <li>Sending an invalid <code>afterFinishedAt</code> parameter now returns <code>invalid_task_after_finished_at</code> instead of <code>invalid_task_date_filter</code></li>
     </ul>
   </details>
 * When calling `GET /keys` and `GET /keys/:uid`, the following error `code`s have been updated:
