--- a/meilisearch-release-changelog/v1.0.0.md
+++ b/meilisearch-release-changelog/v1.0.0.md
@@ -185,8 +185,8 @@ This is a breaking change if you use any of the following `code`s or `type`s in 
   <details>
     <summary>Click for details</summary>
       <ul>
-        <li>Incorrect use of the <code>limit</code> parameter now returns <code>invalid_api_key_limit</code> instead of <code>bad_request</code></li>
-        <li>Incorrect use of the <code>offset</code> parameter now returns <code>invalid_api_key_offset</code> instead of <code>bad_request</code></li>
+        <li>Sending an invalid <code>limit</code> parameter now returns <code>invalid_api_key_limit</code> instead of <code>bad_request</code></li>
+        <li>Sending an invalid <code>offset</code> parameter now returns <code>invalid_api_key_offset</code> instead of <code>bad_request</code></li>
       </ul>
   </details>
 * When calling `POST /keys`, the following error `code`s have been updated:
