--- a/meilisearch-release-changelog/v1.0.0.md
+++ b/meilisearch-release-changelog/v1.0.0.md
@@ -220,7 +220,7 @@ This is a breaking change if you use any of the following `code`s or `type`s in 
   - `too_many_open_files` instead of `internal` as a `code`
   - `system` instead of `internal` as a `type`
 * Any Meilisearch errors with `system` type returns HTTP error code `500` (#3321) @irevoire
-* Some errors are now returned synchronously
+* The following errors are now returned synchronously:
   - `invalid_index_uid`
   - `invalid_settings_ranking_rules`
   - `invalid_settings_typo_tolerance` if `oneTypo` and `twoTypos` are filled (for `minWordSizeForTypos`) but are invalid
