--- a/meilisearch-release-changelog/v1.0.0.md
+++ b/meilisearch-release-changelog/v1.0.0.md
@@ -267,7 +267,7 @@ The following changes do not impact user experience.
   * Replace Slack by Discord in README.md (#3234 and #3276) @tpayet @shivaylamba
 * Internal changes
   * Implement Uuid codec for heed (#3001) @elbertronnie
-  * Improve the way we receive the documents payload (#3164 and #3266) @jiangbo212
+  * Improve how we receive the documents payload (#3164 and #3266) @jiangbo212
   * Improve clarity of the code that receives payloads (#3236) @Kerollmops
   * Extract the dates out of the dumpv4 (#3012 and #3190) @funilrys @irevoire
   * Rename meilisearch-http (#3112) @colbsmcdolbs
