--- a/meilisearch-release-changelog/v1.0.0.md
+++ b/meilisearch-release-changelog/v1.0.0.md
@@ -264,7 +264,7 @@ The following changes do not impact user experience.
   * Update mini-dashboard to v0.2.4 (#3186, and #3322) @mdubus
 * Documentation
   * Update README to reference Meilisearch Cloud (#3221) @davelarkan
-  * Replace Slack by Discord in README.md (#3234 and #3276) @tpayet @shivaylamba
+  * Replace Slack link with Discord in README.md (#3234 and #3276) @tpayet @shivaylamba
 * Internal changes
   * Implement Uuid codec for heed (#3001) @elbertronnie
   * Improve how we receive the documents payload (#3164 and #3266) @jiangbo212
