--- a/meilisearch-release-changelog/v1.0.0.md
+++ b/meilisearch-release-changelog/v1.0.0.md
@@ -253,7 +253,7 @@ The following changes do not impact user experience.
   * Use ubuntu-18.04 container instead of GitHub hosted actions (#3261) @curquiza
 * Test suite
   * Re-enable dump tests (#3119) @irevoire
-  * Re-enable the dump test on the dates (#3188) @irevoire
+  * Re-enable dump test on dates (#3188) @irevoire
   * Stop snapshotting the version of Meilisearch in the dump test (#3208) @irevoire
   * Update insta snap tests for index dates of dump v5 (#3302) @loiclec
   * Add a test on finite pagination placeholder search when distinct is enabled (#3251) @ManyTheFish
