--- a/meilisearch-release-changelog/v1.0.0.md
+++ b/meilisearch-release-changelog/v1.0.0.md
@@ -235,7 +235,7 @@ Done by @irevoire and @loiclec in #3316, #3263, #3329, #3334 and #3339
 * Index creation and update dates are now kept when using a dump (#3245) @amab8901
 * Fix documentation link when returning errors (#3288) @loiclec
 * When using `/tasks routes`, fix the usage of `*`. More information in this issue about the bug (#3339) @loiclec
-* Fix the cancelling task behavior when sending an invalid `canceledBy` (#3375) @Kerollmops
+* Fix `/tasks/cancel` behavior when sending an invalid `canceledBy` parameter (#3375) @Kerollmops
 * Fix dumps import for Windows, see [this issue](https://github.com/meilisearch/meilisearch/issues/2878) for more information.
 
 # Misc
