--- a/meilisearch-release-changelog/v1.0.0.md
+++ b/meilisearch-release-changelog/v1.0.0.md
@@ -92,7 +92,7 @@ This is a breaking change if you use any of the following `code`s or `type`s in 
         <li>If the <code>indexes</code> field is missing, Meilisearch now returns <code>missing_swap_indexes</code> instead of <code>missing_parameter</code></li>
       </ul>
   </details>
-* When calling `GET /indexes` and `GET /indexes/:uid`, some error `code`s have been changed.
+* When calling `GET /indexes` and `GET /indexes/:uid`, the following error `code`s have been updated:
   <details>
     <summary>Click for details</summary>
       <ul>
