--- a/meilisearch-release-changelog/v1.0.0.md
+++ b/meilisearch-release-changelog/v1.0.0.md
@@ -217,8 +217,8 @@ This is a breaking change if you use any of the following `code`s or `type`s in 
   - the `io_error` code replaces `internal`
   - `system` type replaces `internal`
 * When your machines exceeds the maximum number allowed for open files, Meilisearch returns
-  - `too_many_open_files` instead of `internal` as a `code`
-  - `system` instead of `internal` as a `type`
+  -  the `too_many_open_files` code instead of `internal`
+  - `system` type instead of `internal`
 * Any Meilisearch errors with `system` type returns HTTP error code `500` (#3321) @irevoire
 * The following errors are now returned synchronously:
   - `invalid_index_uid`
