--- a/meilisearch-release-changelog/v1.0.0.md
+++ b/meilisearch-release-changelog/v1.0.0.md
@@ -219,7 +219,7 @@ This is a breaking change if you use any of the following `code`s or `type`s in 
 * When your machines exceeds the maximum number allowed for open files, Meilisearch returns
   -  the `too_many_open_files` code instead of `internal`
   - `system` type instead of `internal`
-* Any Meilisearch errors with `system` type returns HTTP error code `500` (#3321) @irevoire
+* All Meilisearch errors of type `system` return the HTTP error code `500` (#3321) @irevoire
 * The following errors are now returned synchronously:
   - `invalid_index_uid`
   - `invalid_settings_ranking_rules`
