--- a/meilisearch-release-changelog/v1.0.0.md
+++ b/meilisearch-release-changelog/v1.0.0.md
@@ -122,7 +122,7 @@ This is a breaking change if you use any of the following `code`s or `type`s in 
     <summary>Click for details</summary>
       <ul>
         <li>Sending an invalid <code>primaryKey</code> parameter now returns <code>invalid_index_primary_key</code> instead of <code>bad_request</code></li>
-        <li><code>invalid_document_geo_field</code> has been renamed to <code>invalid_geo_field</code></li>
+        <li><code>invalid_document_geo_field</code> is renamed to <code>invalid_geo_field</code></li>
       </ul>
   </details>
 * When calling `GET /index/:uid/search` and `POST /indexes/:uid/search`, some error `code`s have been changed.
