--- a/meilisearch-release-changelog/v1.0.0.md
+++ b/meilisearch-release-changelog/v1.0.0.md
@@ -202,12 +202,12 @@ This is a breaking change if you use any of the following `code`s or `type`s in 
   <details>
     <summary>Click for details</summary>
       <ul>
-        <li>If trying to update the <code>uid</code> field, Meilisearch now returns <code>immutable_api_key_uid</code> instead of <code>immutable_field</code></li>
-        <li>If trying to update the <code>actions</code> field, Meilisearch now returns <code>immutable_api_key_actions</code> instead of <code>immutable_field</code></li>
-        <li>If trying to update the <code>indexes</code> field, Meilisearch now returns <code>immutable_api_key_indexes</code> instead of <code>immutable_field</code></li>
-        <li>If trying to update the <code>expiresAt</code> field, Meilisearch now returns <code>immutable_api_key_expires_at</code> instead of <code>immutable_field</code></li>
-        <li>If trying to update the <code>createdAt</code> field, Meilisearch now returns <code>immutable_api_key_created_at</code> instead of <code>immutable_field</code></li>
-        <li>If trying to update the <code>updatedAt</code> field, Meilisearch now returns <code>immutable_api_key_updated_at</code> instead of <code>immutable_field</code></li>
+        <li>Updating the <code>uid</code> field now returns <code>immutable_api_key_uid</code> instead of <code>immutable_field</code></li>
+        <li>Updating the <code>actions</code> field now returns <code>immutable_api_key_actions</code> instead of <code>immutable_field</code></li>
+        <li>Updating the <code>indexes</code> field now returns <code>immutable_api_key_indexes</code> instead of <code>immutable_field</code></li>
+        <li>Updating the <code>expiresAt</code> field now returns <code>immutable_api_key_expires_at</code> instead of <code>immutable_field</code></li>
+        <li>Updating the <code>createdAt</code> field now returns <code>immutable_api_key_created_at</code> instead of <code>immutable_field</code></li>
+        <li>Updating the <code>updatedAt</code> field now returns <code>immutable_api_key_updated_at</code> instead of <code>immutable_field</code></li>
       </ul>
   </details>
 * When Meilisearch does not have enough space
