--- a/meilisearch-release-changelog/v1.0.0.md
+++ b/meilisearch-release-changelog/v1.0.0.md
@@ -83,7 +83,7 @@ All detailed task responses contain the `error` field. When a task fails, it is 
 
 This is a breaking change if you use any of the following `code`s or `type`s in your code base:
 
-* When calling `POST /indexes/swap-indexes`, some error `code`s have been changed.
+* When calling `POST /indexes/swap-indexes`, the following error `code`s have been updated:
   <details>
     <summary>Click for details</summary>
       <ul>
