--- a/meilisearch-release-changelog/v1.0.0.md
+++ b/meilisearch-release-changelog/v1.0.0.md
@@ -100,7 +100,7 @@ This is a breaking change if you use any of the following `code`s or `type`s in 
         <li>Sending an invalid <code>offset</code> parameter now returns <code>invalid_index_offset</code> instead of <code>bad_request</code></li>
     </ul>
   </details>
-* When calling `POST /indexes` and `PUT /indexes/:uid`, some error `code`s have been changed.
+* When calling `POST /indexes` and `PUT /indexes/:uid`, the following error `code`s have been updated:
   <details>
     <summary>Click for details</summary>
       <ul>
