--- a/meilisearch-release-changelog/v1.0.0.md
+++ b/meilisearch-release-changelog/v1.0.0.md
@@ -125,7 +125,7 @@ This is a breaking change if you use any of the following `code`s or `type`s in 
         <li><code>invalid_document_geo_field</code> is renamed to <code>invalid_geo_field</code></li>
       </ul>
   </details>
-* When calling `GET /index/:uid/search` and `POST /indexes/:uid/search`, some error `code`s have been changed.
+* When calling `GET /index/:uid/search` and `POST /indexes/:uid/search`, the following error `code`s have been updated:
   <details>
     <summary>Click for details</summary>
       <ul>
