--- a/meilisearch-release-changelog/v1.0.0.md
+++ b/meilisearch-release-changelog/v1.0.0.md
@@ -108,7 +108,7 @@ This is a breaking change if you use any of the following `code`s or `type`s in 
         <li>Sending an invalid <code>primaryKey</code> now returns <code>invalid_index_primary_key</code> instead of <code>bad_request</code></li>
       </ul>
   </details>
-* When calling `GET /index/:uid/documents` and `GET /indexes/:uid/documents/:uid`, some error `code`s have been changed.
+* When calling `GET /index/:uid/documents` and `GET /indexes/:uid/documents/:uid`, the following error `code`s have been updated:.
   <details>
     <summary>Click for details</summary>
       <ul>
