Add changelogs following rc2

--- a/meilisearch-release-changelog/v1.0.0.md
+++ b/meilisearch-release-changelog/v1.0.0.md
@@ -115,6 +115,7 @@ This is a breaking change if you use any of the following `code`s or `type`s in 
         <li>Sending an invalid<code>fields</code> parameter now returns <code>invalid_document_fields</code> instead of <code>bad_request</code></li>
         <li>Sending an invalid <code>limit</code> parameter now returns <code>invalid_document_limit</code> instead of <code>bad_request</code></li>
         <li>Sending an invalid <code>offset</code> parameter now returns <code>invalid_document_offset</code> instead of <code>bad_request</code></li>
+        <li>When adding documents, trying to update the primary-key now throw an error</li>
       </ul>
   </details>
 * When calling `POST /index/:uid/documents` and `PUT /indexes/:uid/documents`
@@ -225,7 +226,7 @@ This is a breaking change if you use any of the following `code`s or `type`s in 
   - `invalid_settings_ranking_rules`
   - `invalid_settings_typo_tolerance` if `oneTypo` and `twoTypos` are filled (for `minWordSizeForTypos`) but are invalid
 
-Done by @irevoire and @loiclec in #3316, #3263, #3329, #3334 and #3339
+Done by @irevoire and @loiclec in #3316, #3263, #3329, #3334, #3412 and #3339
 
 # Fixes 🐞
 
@@ -237,6 +238,9 @@ Done by @irevoire and @loiclec in #3316, #3263, #3329, #3334 and #3339
 * Fix the usage of `*` for the `tasks` routes. More information on this issue (#3339) @loiclec
 * Fix `/tasks/cancel` behavior when sending an invalid `canceledBy` parameter (#3375) @Kerollmops
 * Fix dumps import for Windows, see [this issue](https://github.com/meilisearch/meilisearch/issues/2878) for more information.
+* Return an error when a `_geo` field contains one extra unspecified field (#3415 meilisearch/milli#772) @irevoire
+* Fix error message when `lat` and `lng` are unparseable (#3415 meilisearch/milli#763) @ahlner
+* Fix the `databaseSize` value of the `/stats` route (#3418) @irevoire
 
 # Misc
 
