Add information about SDKs

--- a/meilisearch-release-changelog/v1.0.0.md
+++ b/meilisearch-release-changelog/v1.0.0.md
@@ -14,7 +14,8 @@ Despite our focus on stabilizing Meilisearch, we also took the time to improve s
 
 <!-- The following lines should ONLY be put in the official release changelogs -->
 Here is the exhaustive list of integrations  **not immediately compatible** with v1.0.0:
-- TBD
+- [meilisearch-swift](https://github.com/meilisearch/meilisearch-swift): though you can still use this library with v1.0.0, some new features present in Meilisearch v0.30.0 and later are not yet available. Let us know if you really need it—and contributions are always welcome in the related repository!
+- [meilisearch-java](https://github.com/meilisearch/meilisearch-java): our team is still working on refactoring the code; this is reaching the end, but the SDK cannot be used with v0.29.0 and later yet. Follow the repository to know when it will be compatible.
 
 <!-- The following line should NOT be put in the official release changelogs -->
 📖 Meilisearch's official documentation will be ready for the official v1.0.0 release. Meanwhile, work-in-progress documentation is available [here]().
