Update changelogs following Louis feedback

--- a/meilisearch-release-changelog/v1.0.0.md
+++ b/meilisearch-release-changelog/v1.0.0.md
@@ -41,6 +41,7 @@ Done by @ManyTheFish, @dureuill, @choznerol, @crudiedo, @daniel-shuy, @harshalkh
 * Improve the performance of the `proximity` ranking rule for search requests ending with short words (#3269 and meilisearch/milli#733) @loiclec
 * Limit the reindexing caused by updating settings when not needed (meilisearch/milli#706 and #3269) @GregoryConrad
 * Reduce incremental indexing time for the proximity ranking rule (#3445 and meilisearch/milli#776) @loiclec
+* Improve soft-deletion computation (meilisearch/milli#747) @dureuill
 
 ## Other improvements
 
@@ -236,7 +237,6 @@ Done by @irevoire and @loiclec in #3316, #3263, #3329, #3334, #3412 and #3339
 * Fix `MDB_PAGE_FULL` internal error that would sometimes occur when inserting documents on macOS (#3210) @Kerollmops
 * Re-introduce the `no_space_left_on_device` error (#3263) @irevoire
 * Index creation and update dates are now kept when using a dump (#3245) @amab8901
-* Fix documentation link when returning errors (#3288) @loiclec
 * Fix the usage of `*` for the `tasks` routes. More information on this issue (#3339) @loiclec
 * Fix `/tasks/cancel` behavior when sending an invalid `canceledBy` parameter (#3375) @Kerollmops
 * Fix dumps import for Windows, see [this issue](https://github.com/meilisearch/meilisearch/issues/2878) for more information.
