--- a/meilisearch-release-changelog/v1.1.0.md
+++ b/meilisearch-release-changelog/v1.1.0.md
@@ -92,7 +92,11 @@ Done by @gmourier and @irevoire in #3405 and #3529.
 
 ## Transparently resize indexes
 
-TBD
+Before v1.0, the maximum size of an index on disk was limited according to the `--max-index-size` CLI parameter, and the number of indexes that could be accessed by one Meilisearch process would depend on this value (typically, about 1000 indexes with the default setting of 100GiB for `--max-index-size`).
+
+v1.0 removed `--max-index-size` and fixed the maximum size of indexes to 500GiB, with about 200 concurrent indexes accessible to a Meilisearch process.
+
+The removal of `--max-index-size` was made in preparation for this release: you can now use an unlimited number of indexes, whose maximum size will be only dictated by the memory address space devoted to a single process by the OS. The limit is at about 80TiB under Linux, you might run out of disk space before reaching it!
 
 Done by @dureuill in #3319, #3331 and #3544.
 
