--- a/meilisearch-release-changelog/v1.1.0.md
+++ b/meilisearch-release-changelog/v1.1.0.md
@@ -90,7 +90,7 @@ When doing a filter (with the `filter` parameter) during the search, you can now
 
 Done by @gmourier and @irevoire in #3405 and #3529.
 
-## Transparently resize indexes
+## Lifting the limits on index size and count
 
 Before v1.0, the maximum size of an index on disk was limited according to the `--max-index-size` CLI parameter, and the number of indexes that could be accessed by one Meilisearch process would depend on this value (typically, about 1000 indexes with the default setting of 100GiB for `--max-index-size`).
 
