--- a/meilisearch-release-changelog/v1.1.0.md
+++ b/meilisearch-release-changelog/v1.1.0.md
@@ -156,7 +156,7 @@ The following changes do not impact user experience.
   * Pin Rust version in Clippy job (#3451) @curquiza
   * Update comments in version bump CI (#3519) @curquiza
   * Fix cargo flaky (#3348) @irevoire
-  * Make clippy happy for Rust 1.67, allow `uninlined_format_args` (#3434) @dureuill -> TBD
+  * Make clippy happy for Rust 1.67, allow `uninlined_format_args` (#3434) @dureuill
 * Documentation
   * Fixup `dumps-destination` into `dump-directory` section header in help link (#3199) @dureuill
   * Add prototype guide to CONTRIBUTING.md (#3433) @curquiza
