Add precision about RC0

--- a/meilisearch-release-changelog/v1.1.0.md
+++ b/meilisearch-release-changelog/v1.1.0.md
@@ -134,6 +134,7 @@ Done in #3347 and on the [Charabia side](https://github.com/meilisearch/charabia
 * Batch together addition and deletion tasks to speed up indextation. You don't have to do anything to activate it, just enjoy! (#3470) @irevoire
 * Accept `null` as a valid `_geo` field when importing or updating documents (#3515) @irevoire
 * Reduce crate size (from ~200MB to ~50MB) by compressing dictionaries (#3347) @ManyTheFish
+<!-- The following line should NOT be put in RC0 release changelogs because not present yet -->
 * Cache the result of the indexes stats (#3541) @irevoire
 
 # Fixes 🐞
