--- a/meilisearch-release-changelog/v1.1.0.md
+++ b/meilisearch-release-changelog/v1.1.0.md
@@ -3,7 +3,8 @@
 <!-- The following line should NOT be put in the official release changelogs -->
 ⚠️ Since this is a release candidate (RC), we do NOT recommend using it in a production environment. Is something not working as expected? We welcome [bug reports](https://github.com/meilisearch/meilisearch/issues/new/choose) and [feedback about new features](https://github.com/meilisearch/product/discussions).
 
-This is not your average boring release! This brand new release introduces a tons of exciting features including the demanded multi-index search! You can now do one single HTTP request to perform different searches in multiple indexes.<br>
+Meilisearch v1.1.0 introduces the much-requested multi-index search! You can now use one single HTTP request to perform different searches in multiple indexes.
+
 Also, already existing features have been pimped: the geo-search with the introduction of the `geoBoundingBox`, the addition of the facet stats, the CSV import including the sperator customization... Read the full changelog to be sure not to miss anything!
 
 <!-- The following lines should ONLY be put in the official release changelogs -->
