--- a/meilisearch-release-changelog/v1.1.0.md
+++ b/meilisearch-release-changelog/v1.1.0.md
@@ -5,7 +5,7 @@
 
 Meilisearch v1.1.0 introduces the much-requested multi-index search! You can now use one single HTTP request to perform different searches in multiple indexes.
 
-Also, already existing features have been pimped: the geo-search with the introduction of the `geoBoundingBox`, the addition of the facet stats, the CSV import including the sperator customization... Read the full changelog to be sure not to miss anything!
+Additional new features include: `geoBoundingBox` geosearch filter, addition of a `facetStats` objects to queries using the `facets` search parameters, and customization of CSV separators.
 
 <!-- The following lines should ONLY be put in the official release changelogs -->
 🧰 Most integrations (SDKs, clients, libraries) will be compatible with this version within four hours of the release. Sometimes this can take up to 48 hours, depending on the issues we encounter during the release.
