--- a/meilisearch-release-changelog/v1.1.0.md
+++ b/meilisearch-release-changelog/v1.1.0.md
@@ -21,7 +21,7 @@ TBD
 
 ## Multi-index search: allow multiple searches in a single request
 
-Meilisearch can now perform searches in multiple indexes in a single HTTP request
+Perform searches in multiple indexes in a single HTTP request using the new `/multi-search` endpoint:
 
 ```bash
 curl \
