--- a/meilisearch-release-changelog/v1.1.0.md
+++ b/meilisearch-release-changelog/v1.1.0.md
@@ -27,25 +27,20 @@ Perform searches in multiple indexes in a single HTTP request using the new `/mu
 curl \
   -X POST 'http://localhost:7700/multi-search' \
   -H 'Content-Type: application/json'
-```
-
-and by using this payload
-
-```json
-{
-  "queries": [
-    {
-      "indexUid": "products",
-      "q": "Nike",
-      "limit": 1
-    },
-    {
-      "indexUid": "brands",
-      "q": "Nike",
-      "limit": 1
-    }
-  ]
-}
+  --data-binary '{
+    "queries": [
+       {
+         "indexUid": "products",
+         "q": "Nike",
+         "limit": 1
+       },
+      {
+         "indexUid": "brands",
+         "q": "Nike",
+         "limit": 1
+      }
+    ]
+  }'
 ```
 
 In this case, Meilisearch returns an array of results for each index:
