--- a/meilisearch-release-changelog/v1.1.0.md
+++ b/meilisearch-release-changelog/v1.1.0.md
@@ -43,7 +43,7 @@ curl \
   }'
 ```
 
-In this case, Meilisearch returns an array of results for each index:
+When you use the multi-index search endpoint, Meilisearch returns an array of results for each queried index:
 
 ```json
 {
