--- a/meilisearch-release-changelog/v1.1.0.md
+++ b/meilisearch-release-changelog/v1.1.0.md
@@ -114,7 +114,7 @@ The `/metrics` route will be available and compatible with Prometheus.
 
 Done by @irevoire, @dureuill, and @james-2001 in #3496, #3524, #3538 and #3543.
 
-## Improve the language support
+## Improve language support
 
 * Enhance Greek support by normalizing diacritics and final sigma
 * Enhance Arabic support by ignoring Tatweel
