--- a/meilisearch-release-changelog/v1.1.0.md
+++ b/meilisearch-release-changelog/v1.1.0.md
@@ -72,7 +72,7 @@ When you use the multi-index search endpoint, Meilisearch returns an array of re
 
 Done by @dureuill in #3417
 
-## Introduce facet stats
+## Introduce `facetStats`
 
 When using the `facets` parameter during a search, statistics about the distributed facets are displayed in a `facetStats` object. This object will contain the minimum (`min`) and the maximum (`max`) of each numerical facet corersponding to search query.
 
