--- a/meilisearch-release-changelog/v1.1.0.md
+++ b/meilisearch-release-changelog/v1.1.0.md
@@ -135,7 +135,7 @@ Done in #3347 and on the [Charabia side](https://github.com/meilisearch/charabia
 
 # Fixes 🐞
 
-* Enhance facet string normalization: `sortBy` is now correct for accented characters (#3372) @ManyTheFish
+* Improve facet string normalization: fixes issues when using `sortBy` with accented characters (#3372) @ManyTheFish
 * Fix web interface issues: bump version of search preview to [v0.2.6](https://github.com/meilisearch/mini-dashboard/releases/tag/v0.2.6) (#3514) @bidoubiwa
 * Unify "Bad latitude" and "Bad longitude" errors (#3479) @cymruu
 * Prevent from "Cannot allocate memory" errors when creating a lot of indexes (#3331) @dureuill
